PrintPagesToSkPictures: observe WebFrame::getPrintPageShrink()

BUG=651847

Review-Url: https://codereview.chromium.org/2374203002
Cr-Commit-Position: refs/heads/master@{#422218}

Former-commit-id: ab360081194b7a5815f407666b748279cab0e384